MPEG4 unsupported timebase denominator #65803

Closed
opened 2019-06-14 12:29:48 +02:00 by Jeroen Bakker · 3 comments
Member

System Information
Operating system: Linux-4.15.0-51-generic-x86_64-with-Ubuntu-18.04-bionic 64 Bits
Graphics card: AMD Radeon (TM) Pro WX 7100 Graphics ATI Technologies Inc. 4.5.13542 Core Profile Context FireGL 18.50.1.418

Blender Version
Broken: version: 2.80 (sub 74), branch: Unknown, commit date: Unknown Unknown, hash: rBUnknown
Worked: (optional)

Short description of error
When setting

  • framerate: 23.98
  • fileformat: FFmpeg video
  • Video Codec: MPEG-4 (divx)

an message will appear that the maximum admitted value for the timebase denominator is 65536
image.png

Exact steps for others to reproduce the error
With
ffmpeg-divx-denominator.blend

  1. press render animation
**System Information** Operating system: Linux-4.15.0-51-generic-x86_64-with-Ubuntu-18.04-bionic 64 Bits Graphics card: AMD Radeon (TM) Pro WX 7100 Graphics ATI Technologies Inc. 4.5.13542 Core Profile Context FireGL 18.50.1.418 **Blender Version** Broken: version: 2.80 (sub 74), branch: Unknown, commit date: Unknown Unknown, hash: `rBUnknown` Worked: (optional) **Short description of error** When setting - framerate: 23.98 - fileformat: FFmpeg video - Video Codec: MPEG-4 (divx) an message will appear that `the maximum admitted value for the timebase denominator is 65536` ![image.png](https://archive.blender.org/developer/F7102710/image.png) **Exact steps for others to reproduce the error** With [ffmpeg-divx-denominator.blend](https://archive.blender.org/developer/F7102714/ffmpeg-divx-denominator.blend) 1. press render animation
Author
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Sybren A. Stüvel was assigned by Jeroen Bakker 2019-06-14 12:30:03 +02:00

This issue was referenced by 956cb4f403

This issue was referenced by 956cb4f403dd3a6ddb379202dc1f2770b9820073

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65803
No description provided.